feat: add @plain-kit/http package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
     "references": [
         {
             "path": "./packages/router"
+        },
+        {
+            "path": "./packages/http"
+        },
+        {
+            "path": "./packages/signals"
         }
     ]
 }
