--- a/packages/http/tsconfig.json
+++ b/packages/http/tsconfig.json
@@ -1,19 +1,5 @@
 {
-    "compilerOptions": {
-        "target": "ESNext",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "lib": [
-            "ESNext",
-            "DOM"
-        ],
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
-        "allowImportingTsExtensions": true
-    },
+    "extends": "../../tsconfig.base.json",
     "include": [
         "src/**/*",
         "test/**/*"
