--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -1,15 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "lib": ["ESNext", "DOM"],
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "allowImportingTsExtensions": true
-  },
-  "include": ["src/**/*", "example.ts"]
+  "extends": "../../tsconfig.base.json",
+  "include": [
+    "src/**/*",
+    "example.ts"
+  ]
 }
