--- a/packages/signals/tsconfig.json
+++ b/packages/signals/tsconfig.json
@@ -1,15 +1,6 @@
 {
-	"compilerOptions": {
-		"target": "ESNext",
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
-		"lib": ["ESNext", "DOM"],
-		"strict": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
-		"allowImportingTsExtensions": true
-	},
-	"include": ["src/**/*"]
+	"extends": "../../tsconfig.base.json",
+	"include": [
+		"src/**/*"
+	]
 }
