--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
         },
         {
             "path": "./packages/signals"
+        },
+        {
+            "path": "./packages/query"
         }
     ]
 }
